bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_marketdata_uniffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token_and_tls(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptclient_historical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_daily_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_daily(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_tickers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_volumes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_tickers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_volumes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_futopt(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_stock(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_corporate_actions(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_historical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_snapshot(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_technical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_capital_changes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_dividends_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_capital_changes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_dividends(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_listing_applicants(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_listing_applicants_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_stats(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_stats_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_tickers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_tickers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_actives_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_actives(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_movers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_quotes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_movers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_quotes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_bb_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_bb(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_kdj(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_macd(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_rsi(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_sma(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_kdj_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_macd_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_rsi_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_sma_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_connect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_is_closed(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_ping(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_query_subscriptions(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnecting(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnect_failed(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_full_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_url(void
    
);
uint32_t ffi_marketdata_uniffi_uniffi_contract_version(void
    
);