bindings/java/src/main/java/tw/com/fugle/marketdata/generated/UniffiLib.java

    void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_rust_buffer(Long handle);
    RustBuffer.ByValue ffi_marketdata_uniffi_rust_future_complete_rust_buffer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_void(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_void(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_void(Long handle);
    void ffi_marketdata_uniffi_rust_future_complete_void(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key_and_tls();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token_and_tls();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token_and_tls();
    Short uniffi_marketdata_uniffi_checksum_func_new_websocket_client();
    Short uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_config();
    Short uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint();
    Short uniffi_marketdata_uniffi_checksum_method_futoptclient_historical();
    Short uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday();
    Short uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_candles_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_daily_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_candles();
    Short uniffi_marketdata_uniffi_checksum_method_futopthistoricalclient_get_daily();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_candles_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_candles();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_tickers();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_trades();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_volumes();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_tickers_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_trades_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_volumes_sync();
    Short uniffi_marketdata_uniffi_checksum_method_restclient_futopt();
    Short uniffi_marketdata_uniffi_checksum_method_restclient_stock();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_corporate_actions();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_historical();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_intraday();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_snapshot();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_technical();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_capital_changes_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_dividends_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_capital_changes();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_dividends();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_listing_applicants();
    Short uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_listing_applicants_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_candles_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_candles();
    Short uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_stats();
    Short uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_stats_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_tickers();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_tickers_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_actives_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_actives();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_movers();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_quotes();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_movers_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_quotes_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_bb_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_bb();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_kdj();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_macd();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_rsi();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_sma();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_kdj_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_macd_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_rsi_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_sma_sync();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_connect();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_is_closed();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_ping();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_query_subscriptions();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnecting();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnect_failed();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_config();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_full_config();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_url();
    Integer ffi_marketdata_uniffi_uniffi_contract_version();
    
}

